service-skeleton_derive/tests/ui/on_tuple_struct.stderr
error: Unsupported shape `unnamed fields`. Expected named fields.
 --> tests/ui/on_tuple_struct.rs:4:10
  |
4 | #[derive(ServiceConfig)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ServiceConfig` (in Nightly builds, run with -Z macro-backtrace for more info)
