service-skeleton_derive/tests/ui/on_tuple_struct.rs
#![allow(unused_imports, unused_crate_dependencies)]
use service_skeleton_derive::ServiceConfig;

#[derive(ServiceConfig)]
struct Config(String, String);

fn main() {}
